Resolves: fdo#74051 support 8430x11700 jpegs

Change-Id: I1ca95a496bca80e5e2787af2ccbf0f6cd42455a5
(cherry picked from commit 53c803004554a3a0fff26501357a183bba008a26)
Reviewed-on: https://gerrit.libreoffice.org/7697
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>